@@ -1,3 +1,6 @@
+MJ 31/03/05
+- Fixed a bug in DegreeStats related to the observation of dead links.
+
 MJ 30/03/05
 - For DegreeStats and BallExpansion: randomized the node selection when
   the sample is only a subset of the network.
